added feedback, cleaned code
